# clir

./: Cargo.toml
calr/: Cargo.toml  e.txt
calr/src/: main.rs
calr/tests/: cli.rs
calr/tests/expected/: 2020.txt
catr/: Cargo.toml
catr/src/: main.rs
catr/tests/: cli.rs
clir/: Cargo.toml
clir/src/: lib.rs
commr/: Cargo.toml
commr/src/: main.rs
commr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: main.rs
cutr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
findr/: Cargo.toml
findr/src/: main.rs
findr/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: main.rs
headr/tests/: cli.rs
lsr/: Cargo.toml
lsr/src/: main.rs
tailr/: Cargo.toml
tailr/src/: main.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: main.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: main.rs
wcr/tests/: cli.rs
